--- a/status_ui/index.html
+++ b/status_ui/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API Status</title>
+    <title>NVSS FHIR API Status</title>
   </head>
   <body>
     <div id="root"></div>
